apps/servarr/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
