apps/servarr/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: servarr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.lan
    external-dns.alpha.kubernetes.io/target: "192.168.68.62"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.lan`)
      kind: Rule
      middlewares:
        - name: lan-allowlist
          namespace: kube-system
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-lan-tls
