apps/servarr/sonarr/authorizationpolicy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sonarr-allow-probes
  namespace: servarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sonarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet-probes
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sonarr-allow-clients
  namespace: servarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sonarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: sonarr-clients
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sonarr-allow-traefik
  namespace: servarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sonarr-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: sonarr-traefik
